Thread name annotations missing from OSX
Categories
(Toolkit :: Crash Reporting, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox91 | --- | fixed |
People
(Reporter: mccr8, Assigned: gsvelto)
References
Details
Attachments
(1 file)
I was looking at a lot of crashes lately, and I noticed the OSX ones seem to be missing thread names. For instance, bp-e4eb5f07-00c9-474d-9320-059be0200809
I'm not sure where this could be going wrong, but the crash report does have ThreadIdNameMapping under metadata, so maybe the issue is somewhere in Socorro?
Here's an example of a Windows crash that does have thread names annotated (though the main thread and some others aren't annotated). bp-e9650294-215a-4612-818a-07f0f0200812
Linux also seems to be okay: bp-ddaaefa0-61cb-488d-a655-0fb920200812
| Assignee | ||
Comment 1•5 years ago
|
||
This is actually a bug in crash generation. We use the id we store in the thread annotation to find the corresponding threads in the minidump and generate the mapping but the two don't correspond on macOS. The annotations is just an index while the minidump stores the mach port.
This should be an easy fix.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•4 years ago
|
||
I'm working on this. I won't fix the existing code that uses the ThreadIdNameMapping annotation but rather write the names directly into the minidump's ThreadNamesStream. This won't be immediately accessible on crash-stats until we update minidump-stackwalk there, which should happen soon next month.
| Assignee | ||
Comment 4•4 years ago
|
||
Comment 6•4 years ago
|
||
| bugherder | ||
Description
•