Bug 1658831 - Implement a writer for the thread names' minidump stream on macOS r=Gankra

Also adds basic parsing and printing support for the stream.

Differential Revision: https://phabricator.services.mozilla.com/D118927