toolkit/crashreporter/google-breakpad/src/processor/call_stack.cc
@@ -50,6 +50,7 @@ void CallStack::Clear() {
   }
   tid_ = 0;
   last_error_ = 0;
+  name_ = "";
 }
 
 }  // namespace google_breakpad
